test(services): fix failing tests after refactoring