@@ -1,48 +1,62 @@
 package com.example.clients.service;
 
+import com.example.clients.dto.ClientDTO;
+import com.example.clients.mapper.ClientMapper;
 import com.example.clients.model.Client;
 import com.example.clients.repository.ClientRepository;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-
 class ClientServiceTest {
 
     @Mock
     private ClientRepository clientRepository;
 
+    @Mock
+    private ClientMapper clientMapper;
+
     @InjectMocks
     private ClientService clientService;
 
-    private Client client;
+    private static Client client;
+    private static ClientDTO clientDTO;
 
-    @BeforeEach
-    void setUp() {
+    @BeforeAll
+    static void beforeAll() {
         client = new Client();
         client.setClientId(1L);
         client.setName("John");
         client.setLastName("Doe");
+
+        clientDTO = new ClientDTO();
+        clientDTO.setClientId(1L);
+        clientDTO.setName("John");
+        clientDTO.setLastName("Doe");
     }
 
     @Test
     void testGetAllClients() {
-        List<Client> clients = Arrays.asList(client);
+        //given
+        var clients = List.of(client);
+        when(clientMapper.toDto(clients)).thenReturn(List.of(clientDTO));
         when(clientRepository.findAll()).thenReturn(clients);
 
-        List<Client> result = clientService.getAllClients();
+        //when
+        var result = clientService.getAllClients();
 
+        //then
         assertEquals(1, result.size());
         assertEquals("John", result.get(0).getName());
         verify(clientRepository, times(1)).findAll();
@@ -50,32 +64,41 @@ class ClientServiceTest {
 
     @Test
     void testGetClientById() {
+        //given
         when(clientRepository.findById(1L)).thenReturn(Optional.of(client));
+        when(clientMapper.toDto(client)).thenReturn(clientDTO);
 
-        Optional<Client> result = clientService.getClientById(1L);
+        //when
+        var result = clientService.getClientById(1L);
 
-        assertTrue(result.isPresent());
-        assertEquals("John", result.get().getName());
+        //then
+        assertNotNull(result);
+        assertEquals("John", result.getName());
         verify(clientRepository, times(1)).findById(1L);
     }
 
     @Test
     void testSaveClient() {
-        when(clientRepository.save(client)).thenReturn(client);
+        //given
+        doReturn(client).when(clientMapper).toEntity(clientDTO);
+        doReturn(client).when(clientRepository).save(client);
+        doReturn(clientDTO).when(clientMapper).toDto(client);
 
-        Client result = clientService.saveClient(client);
+        //when
+        var result = clientService.saveClient(clientDTO);
 
+        //then
         assertNotNull(result);
         assertEquals("John", result.getName());
-        verify(clientRepository, times(1)).save(client);
+        verify(clientRepository).save(client);
     }
 
     @Test
     void testDeleteClient() {
-        doNothing().when(clientRepository).deleteById(1L);
-
+        //when
         clientService.deleteClient(1L);
 
+        //then
         verify(clientRepository, times(1)).deleteById(1L);
     }
 
